Fixed social icons spacing

--- a/css/src/style.scss
+++ b/css/src/style.scss
@@ -53,9 +53,8 @@ p:empty {
 .contact-social a {
   img {
     display: inline;
-  }
-  a {
     margin-right: 10px;
+    margin-top: 5px;
   }
 }
 
